# poem-test

./: Cargo.toml  Makefile.toml  TODO   test.http
src/: base_endpoint.rs  main.rs  my_obj2.rs  test.http
