[package]
name = "example-openapi-oneof"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
poem = "1.0.38"
poem-openapi = "1.0.41"
tokio = { version = "1.14.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.2.24"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.72"

