[package]
name = "example-openapi-oneof"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
poem = { version="1.3.27", features=["static-files"] }
poem-openapi = "1.3.27"
tokio = { version = "1.15.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.5"
serde = { version = "1.0.132", features = ["derive", "rc"] }
serde_json = "1.0.73"

